// Copyright 2020 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pipe.model;
option go_package = "github.com/pipe-cd/pipe/pkg/model";

import "validate/validate.proto";

enum ApplicationKind {
    KUBERNETES = 0;
    TERRAFORM = 1;
    CROSSPLANE = 2;
    LAMBDA = 3;
    CLOUDRUN = 4;
}

message Application {
    // The generated unique identifier.
    string id = 1 [(validate.rules).string.min_len = 1];
    // The name of the application.
    string name = 2 [(validate.rules).string.min_len = 1];
    // The id of environment this application belongs to.
    string env_id = 3 [(validate.rules).string.min_len = 1];
    // The ID of the piped that should handle this application.
    string piped_id = 4 [(validate.rules).string.min_len = 1];
    // The ID of the project this enviroment belongs to.
    string project_id = 5 [(validate.rules).string.min_len = 1];
    // What kind of this application.
    ApplicationKind kind = 6 [(validate.rules).enum.defined_only = true];
    // The path to the git directory of this application.
    ApplicationGitPath git_path = 7 [(validate.rules).message.required = true];
    // The name of cloud provider where to deploy this application.
    // This must be one of the provider names registered in the piped.
    string cloud_provider = 8 [(validate.rules).string.min_len = 1];

    // Most recent successful deployment information.
    // This also shows information about current running workloads.
    ApplicationCompletedDeployment most_recent_successful_deployment = 11;
    // Current sync state.
    ApplicationSyncState sync_state = 12;

    // Whether the application is disabled or not.
    bool disabled = 13;
    // Unix time when the application is created.
    int64 created_at = 14 [(validate.rules).int64.gt = 0];
    // Unix time of the last time when the application is updated.
    int64 updated_at = 15 [(validate.rules).int64.gt = 0];
}

// ApplicationSyncStatus represents the current state of syncing the application.
enum ApplicationSyncStatus {
    UNKNOWN = 0;
    SYNCED = 1;
    DEPLOYING = 2;
    OUT_OF_SYNC = 3;
}

// Current sync state of a specific application.
// This part is determined by drift detector component of piped.
message ApplicationSyncState {
    ApplicationSyncStatus status = 1 [(validate.rules).enum.defined_only = true];
    string short_reason = 2;
    string reason = 3;
    string head_deployment_id = 4;
    int64 timestamp = 5 [(validate.rules).int64.gt = 0];
}

message ApplicationCompletedDeployment {
    string deployment_id = 1 [(validate.rules).string.min_len = 1];
    string commit_hash = 2 [(validate.rules).string.min_len = 1];
    string version = 3 [(validate.rules).string.min_len = 1];
    int64 started_at = 4 [(validate.rules).int64.gt = 0];
    int64 completed_at = 5 [(validate.rules).int64.gte = 0];
}

message ApplicationGitPath {
    // The unique identifier of a repository that was configured at piped.
    string repo_id = 1 [(validate.rules).string.min_len = 1];
    string path = 2 [(validate.rules).string.min_len = 1];
    string config_path = 3;
}
