// Copyright 2020 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pipe.model;
option go_package = "github.com/pipe-cd/pipe/pkg/model";

import "validate/validate.proto";

enum ApplicationKind {
    KUBERNETES = 0;
    TERRAFORM = 1;
    CROSSPLANE = 2;
    LAMBDA = 3;
    CLOUDRUN = 4;
}

message ApplicationGitPath {
    // The repository that was configured at piped.
    ApplicationGitRepository repo = 1 [(validate.rules).message.required = true];
    string path = 2 [(validate.rules).string.pattern = "^[^/].+$"];
    string config_path = 3 [deprecated=true];
    string config_filename = 4;
    string url = 5;
}

message ApplicationGitRepository {
    string id = 1 [(validate.rules).string.min_len = 1];
    string remote = 2;
    string branch = 3;
}
